--- a/.github/workflows/test-build-deploy.yml
+++ b/.github/workflows/test-build-deploy.yml
@@ -20,7 +20,7 @@ jobs:
   lint:
     runs-on: ubuntu-20.04
     container:
-      image: grafana/mimir-build-image:update-go-1.17.8-8a996bb57
+      image: grafana/mimir-build-image:update-mixtool-dbfa3126a-WIP
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -50,7 +50,7 @@ jobs:
   lint-jsonnet:
     runs-on: ubuntu-20.04
     container:
-      image: grafana/mimir-build-image:update-go-1.17.8-8a996bb57
+      image: grafana/mimir-build-image:update-mixtool-dbfa3126a-WIP
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -79,7 +79,7 @@ jobs:
         test_group_id:    [0, 1, 2, 3]
         test_group_total: [4]
     container:
-      image: grafana/mimir-build-image:update-go-1.17.8-8a996bb57
+      image: grafana/mimir-build-image:update-mixtool-dbfa3126a-WIP
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -105,7 +105,7 @@ jobs:
   build-mimir:
     runs-on: ubuntu-20.04
     container:
-      image: grafana/mimir-build-image:update-go-1.17.8-8a996bb57
+      image: grafana/mimir-build-image:update-mixtool-dbfa3126a-WIP
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -134,7 +134,7 @@ jobs:
   build-tools:
     runs-on: ubuntu-20.04
     container:
-      image: grafana/mimir-build-image:update-go-1.17.8-8a996bb57
+      image: grafana/mimir-build-image:update-mixtool-dbfa3126a-WIP
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -214,7 +214,7 @@ jobs:
     if: (startsWith(github.ref, 'refs/tags/') || startsWith(github.ref, 'refs/heads/r') ) && github.event_name == 'push' && github.repository == 'grafana/mimir'
     runs-on: ubuntu-20.04
     container:
-      image: grafana/mimir-build-image:update-go-1.17.8-8a996bb57
+      image: grafana/mimir-build-image:update-mixtool-dbfa3126a-WIP
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
