Add metrics scraping for helm chart
Signed-off-by: Dimitar Dimitrov <dimitar.dimitrov@grafana.com>

--- a/operations/helm/charts/mimir-distributed/values.yaml
+++ b/operations/helm/charts/mimir-distributed/values.yaml
@@ -1621,14 +1621,20 @@ smoke_test:
   annotations: {}
   initContainers: []
 
-metamonitoring:
+metaMonitoring:
   grafanaAgent:
+    # -- Sets the namespace of the resources. Leave empty or unset to use the same namespace as the Helm release.
+    namespace: ''
     # -- Controls whether to create MetricsInstance, LogsInstance, and GrafanaAgent CRs to scrape the
     # ServiceMonitors of the chart and ship metrics to the remote_write endpoints below
     enabled: false
 
     # -- Controls whether to install the Grafana Agent Operator
     installOperator: false
+
+    # -- Controls whether to scrape cadvisor, kubelet, and kube-state-metrics for metrics related to Mimir.
+    # The scraped metrics will be limited to ones concerning Mimir only: where pod
+    scrapeK8s: true
 
     logs:
       # -- Default destination for logs. The config here is translated to Promtail client
@@ -1637,10 +1643,10 @@ metamonitoring:
         url: ''
         basicAuth:
           username: ''
-          password: ''
+          # -- The value under key 'password' in this secret will be used as the basic authentication password.
+          passwordSecretName: ''
 
-      # -- Client configurations for the LogsInstance that will scrape Mimir pods. Follows the format of
-      # [`promtail.client`](https://grafana.com/docs/loki/latest/clients/promtail/configuration/#clients).
+      # -- Client configurations for the LogsInstance that will scrape Mimir pods. Follows the format of .remote.
       additionalClientConfigs: [ ]
 
     metrics:
@@ -1650,15 +1656,22 @@ metamonitoring:
         url: ''
         basicAuth:
           username: ''
-          password: ''
+          # The value under key 'password' in this secret will be used as the basic authentication password.
+          passwordSecretName: ''
 
-      # -- Additional remote-write for the MetricsInstance that will scrape Mimir pods. Follows the format of
-      # [Prometheus `remote_write`](https://prometheus.io/docs/prometheus/2.27/configuration/configuration/#remote_write)
+      # -- Additional remote-write for the MetricsInstance that will scrape Mimir pods. Follows the format of .remote.
       additionalRemoteWriteConfigs: [ ]
 
-    # -- When grafanaAgent.enabled, controls whether to create ServiceMonitors for cadvisor, kubelet, and kube-state-metrics.
-    # The scraped metrics and logs are reduced to those pertaining to the Mimir release only.
-    scrapeK8s: false
+      scrapeK8s:
+        # -- When grafanaAgent.enabled, controls whether to create ServiceMonitors for cadvisor, kubelet, and kube-state-metrics.
+        # The scraped metrics and logs are reduced to those pertaining to the Mimir release only.
+        enabled: true
+
+        # -- Controls service discovery of kube-state-metrics.
+        kubeStateMetrics:
+          namespace: kube-system
+          labelSelectors:
+            app.kubernetes.io/name: kube-state-metrics
 
     # -- Sets the namespace of the resources. Leave empty or unset to use the same namespace as the Helm release.
     namespace: ''
