Update compare-helm-with-jsonnet to run against all pull requests

--- a/.github/workflows/compare-helm-with-jsonnet.yml
+++ b/.github/workflows/compare-helm-with-jsonnet.yml
@@ -1,9 +1,6 @@
 name: compare-helm-with-jsonnet
 
-on:
-  push:
-    branches:
-      - logiraptor/use-k8s-diff
+on: pull_request
 
 jobs:
   compare-manifests:
