Update kustomizations for memcached refactor

--- a/operations/compare-helm-with-jsonnet/helm/00-base/values.yaml
+++ b/operations/compare-helm-with-jsonnet/helm/00-base/values.yaml
@@ -1,6 +1,6 @@
-memcached:
+memcached-chunks:
     enabled: true
-memcached-queries:
+memcached-index-queries:
     enabled: true
 memcached-metadata:
     enabled: true
